<resources>
    <string name="app_name">@string/personal_assistant</string>
    <string name="title_activity_login">@string/personal_assistant</string>
    <string name="title_activity_base">@string/personal_assistant</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Enter Pin</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Action Buttons-->
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_save">Save</string>
    <string name="action_reveal">Reveal</string>

    <string name="domain">domain</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="enter_domain">Enter domain</string>
    <string name="enter_identifier">Enter identifier</string>
    <string name="enter_name">Name</string>
    <string name="enter_password">Enter password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="password_revealed">Password has been revealed</string>
    <string name="enter_key">Enter key</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="last_updated">Last updated</string>
    <string name="caution">Warning : You have just revealed this credential.</string>

    <string name="delete_warning">Are you sure? \nYou are deleting this credential.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="activity_title_about_us">About Us</string>

    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="home_fragment_password_manager">Password Manager</string>
    <string name="home_fragment_header">ASSIST YOURSELF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_post_login_main">PostLoginMainActivity</string>
    <string name="list_credentials_fragment">Hello list credentials fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Passwords</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_ok">Reveal</string>
    <string name="_12_days">12 days</string>
    <string name="your_name">Your Name</string>
    <string name="sample_email">abc@email.com</string>
    <string name="personal_assistant">Personal Assistant</string>
    <string name="personal_information">Personal</string>
    <string name="security_information">Security</string>
    <string name="condition_mismatch">Condition did not satisfy.</string>
    <string name="nav_passwords">Passwords</string>
    <string name="search_box_string">Search a credential</string>
    <string name="search_hint">domain</string>

</resources>
