<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/text_domain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_domain" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_identifier"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_identifier" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_credential"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/PrimaryFlatButton"
        android:textAllCaps="true"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:text="@string/action_save" />

</LinearLayout>