<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/if_warning"
            android:layout_gravity="center"
            android:src="@android:drawable/stat_sys_warning"
            android:contentDescription="warning"
            app:tint="@color/red" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/text_key"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_key"
                android:text="@string/delete_warning"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end">

        <Button
            android:id="@+id/dialog_delete_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/action_yes"
            android:textAllCaps="true"
            android:theme="@style/PrimaryFlatButtonDanger"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialog_delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/action_no"
            android:textAllCaps="true"
            android:theme="@style/PrimaryFlatButton"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>