<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/domain"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/domain"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/username"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/username" />

            <TextView
                android:id="@+id/password"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:password="true"
                android:text="@string/password"
                tools:ignore="TextViewEdits" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>