<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_reveal_credential"
    tools:context=".fragment.RevealCredentialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:layout_gravity="center">

            <TextView
                android:id="@+id/nothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caution"
                android:layout_margin="5dp"

                android:textColor="@color/warning"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_margin="5dp"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/domain_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/domain"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/revealed_domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/domain_heading"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/domain"
                    android:textSize="@dimen/revealed_font_size" />


                <TextView
                    android:id="@+id/username_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/revealed_domain"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/revealed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username_heading"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/username"
                    android:textSize="@dimen/revealed_font_size" />

                <TextView
                    android:id="@+id/password_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/revealed_username"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/revealed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_heading"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/password"
                    android:textSize="@dimen/revealed_font_size" />

                <TextView
                    android:id="@+id/last_update_time_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/revealed_password"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/last_updated"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/last_update_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/last_update_time_heading"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:textSize="@dimen/revealed_font_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="50dp">

                <Button
                    android:id="@+id/edit_credential"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_toEndOf="@+id/delete_credential"
                    android:text="@string/edit"
                    android:textAllCaps="true"
                    android:theme="@style/PrimaryFlatButton"
                    android:tint="@color/white" />

                <Button
                    android:id="@+id/delete_credential"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="bottom"
                    android:text="@string/delete"
                    android:textAllCaps="true"
                    android:theme="@style/WarningButton"
                    android:tint="@color/white" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>